# zirve-sdk

./: .gitignore  README.md
dotnet/: ZirveSdk.sln
dotnet/Zirve.Sdk/: Zirve.Sdk.csproj  ZirveClient.cs
dotnet/Zirve.Sdk.Tests/: ConfigManagerTests.cs  Zirve.Sdk.Tests.csproj  ZirveClientTests.cs
dotnet/Zirve.Sdk/Analytics/: AnalyticsManager.cs
dotnet/Zirve.Sdk/Auth/: AuthManager.cs
dotnet/Zirve.Sdk/Billing/: BillingManager.cs
dotnet/Zirve.Sdk/Cache/: CacheManager.cs
dotnet/Zirve.Sdk/Cluster/: ClusterManager.cs
dotnet/Zirve.Sdk/Config/: ConfigManager.cs
dotnet/Zirve.Sdk/Crm/: CrmManager.cs
dotnet/Zirve.Sdk/Dashboard/: DashboardManager.cs
dotnet/Zirve.Sdk/Db/: DbManager.cs
dotnet/Zirve.Sdk/Deploy/: DeployManager.cs
dotnet/Zirve.Sdk/Error/: ErrorManager.cs
dotnet/Zirve.Sdk/Extensions/: ServiceCollectionExtensions.cs
dotnet/Zirve.Sdk/Gateway/: GatewayManager.cs
dotnet/Zirve.Sdk/Ingress/: IngressManager.cs
go/: go.mod  go.sum
go/zirve/: client.go  client_test.go
php/: composer.json
php/src/: Zirve.php
php/tests/: Pest.php
rust/zirve_sdk/: Cargo.toml
rust/zirve_sdk/src/: analytics.rs  auth.rs  billing.rs  cache.rs  cluster.rs  config.rs  crm.rs  dashboard.rs  db.rs  deploy.rs  error.rs  gateway.rs  ingress.rs  lib.rs  log.rs  metrics.rs  oncall.rs  quality.rs  queue.rs  registry.rs  remote.rs  search.rs  secrets.rs  storage.rs  testing.rs  trace.rs
rust/zirve_sdk/tests/: client_test.rs
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
typescript/tests/: ConfigManager.test.ts  Zirve.test.ts
(+89 files in other folders)
