[package]
name = "zirve_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.44"
hostname = "0.4.2"
redis = { version = "1.0.5", features = ["json", "tokio-comp"] }
reqwest = { version = "0.13.2", features = ["json"] }
rust-s3 = "0.37.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.50.0", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.22.0", features = ["v4"] }
